--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- <h1>hello</h1> -->
 <!-- <app-login></app-login> -->
 <!-- <app-dashboard></app-dashboard> -->
+<!-- <app-dashboard></app-dashboard> -->
+
 <router-outlet></router-outlet>
