--- a/src/app/mainpage/dashboard/dashboard.component.html
+++ b/src/app/mainpage/dashboard/dashboard.component.html
@@ -6,7 +6,9 @@
         <div class="col-9 px-3 px-md-0">
             <!-- toggler -->
             <a data-toggle="collapse" href="#" data-target=".collapse" role="button" class="p-1" style="color: white;">
-                <span class="navbar-toggler-icon">navtogle</span>
+                <span class="navbar-toggler-icon">
+                    <i class="fa fa-bars fa-lg"></i>
+                </span>
             </a>
         </div>
         <div class="col-1 text-right " style="color: white;">
@@ -28,9 +30,9 @@
     <div class="row vh-100 collapse show no-gutters d-flex h-100 position-relative">
         <div class="col-2 p-0 vh-100 h-100 text-white w-sidebar navbar-collapse collapse d-none d-md-flex sidebar">
             <!-- fixed sidebar -->
-            <div class=" bg-dark position-fixed h-100 w-sidebar p-1">
+            <div class=" bg-dark position-fixed h-100 w-sidebar p-1" style="margin-top: 100px;">
                 <div class="container text-center" style="height: 10%;">
-                    <h1>TAJ</h1>
+                    <h1 style="color: honeydew;">TAJ</h1>
                 </div>
                
                 <ul class="nav flex-column flex-nowrap ">
@@ -44,7 +46,7 @@
             </div>
         </div>
         <div class="col-10 p-3">
-            <div class="container">
+            <div class="container" style="margin-top: 50px;">
                 <div class="jumbotron text-center">
                 <h1 style="font-weight: 800;"> Dashboard </h1></div>
                 <div class="table-responsive">
